<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/firstAnim"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/fish" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/secondAnim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/fish2" />


    <com.bossbon.bossnza.game.library.CustomButton
        android:id="@+id/soundButton"
        style="@style/MenuButtons"
        android:text="@string/start"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintEnd_toEndOf="@+id/resetButton"
        app:layout_constraintStart_toStartOf="@+id/resetButton" />

    <com.bossbon.bossnza.game.library.CustomButton
        android:id="@+id/resetButton"
        style="@style/MenuButtons"
        android:layout_marginTop="12dp"
        android:text="@string/reset_balance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.bossbon.bossnza.game.library.CustomButton
        android:id="@+id/exitGameButton"
        style="@style/MenuButtons"
        android:text="@string/exit_game"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="@+id/resetButton"
        app:layout_constraintStart_toStartOf="@+id/resetButton"
        app:layout_constraintTop_toBottomOf="@+id/resetButton" />

    <com.bossbon.bossnza.game.library.CustomImageButton
        android:id="@+id/menuButton"
        android:src="@drawable/ic_back"
        android:layout_width="50dp"
        android:layout_margin="12dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="360dp"
        android:layout_height="120dp"
        android:src="@drawable/img_logotype"
        app:layout_constraintBottom_toTopOf="@+id/soundButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/img_character"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>